fixed layout issues with height and overflow on the menu

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -7,8 +7,15 @@
 /////// Import Other less files ///////
 @import 'theme';
 
+.app{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 main{
   display: flex;
+  height: 100%;
 }
 
 .button{
@@ -140,7 +147,6 @@ header{
 .home-multisection-widget {
   width: 100%;
   overflow: scroll;
-  height: 100%;
 
   .multisection-section {
     transition: transform 800ms cubic-bezier(0.19, 1, 0.22, 1);
